# QMessengerQT

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  connecter.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  Entities.h  connecter.cpp  connecter.h  main.cpp  mainwindow.cpp  mainwindow.h  qmsgwebsocket.cpp  qmsgwebsocket.h  translation.cpp  translation.h
